--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -165,7 +165,7 @@
               Value="NoWrap" />
     </Style>
   </Page.Resources>
-  <RelativePanel>
+  <RelativePanel Background="{ThemeResource SystemControlAltHighAcrylicWindowBrush}">
     <Image x:Name="imgConnect"
            RelativePanel.AlignBottomWithPanel="True"
            RelativePanel.AlignLeftWithPanel="True"
