--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -32,6 +32,101 @@
       <Setter Property="RelativePanel.AlignRightWithPanel"
               Value="True" />
     </Style>
+    <Style x:Key="CompactRatingStyle"
+           TargetType="RatingControl">
+      <Setter Property="Height"
+              Value="Auto" />
+      <Setter Property="Padding"
+              Value="0" />
+      <Setter Property="Template">
+        <Setter.Value>
+          <ControlTemplate TargetType="RatingControl">
+            <Grid x:Name="LayoutRoot">
+
+              <VisualStateManager.VisualStateGroups>
+                <VisualStateGroup x:Name="CommonStates">
+
+                  <VisualState x:Name="Disabled">
+                    <VisualState.Setters>
+                      <Setter Target="ForegroundContentPresenter.Foreground"
+                              Value="{ThemeResource RatingControlDisabledSelectedForeground}" />
+                    </VisualState.Setters>
+                  </VisualState>
+                  <VisualState x:Name="Placeholder">
+                    <VisualState.Setters>
+                      <Setter Target="ForegroundContentPresenter.Foreground"
+                              Value="{ThemeResource RatingControlPlaceholderForeground}" />
+                    </VisualState.Setters>
+                  </VisualState>
+                  <VisualState x:Name="PointerOverPlaceholder">
+                    <VisualState.Setters>
+                      <Setter Target="ForegroundContentPresenter.Foreground"
+                              Value="{ThemeResource RatingControlPointerOverPlaceholderForeground}" />
+                    </VisualState.Setters>
+                  </VisualState>
+                  <VisualState x:Name="PointerOverUnselected">
+                    <VisualState.Setters>
+                      <Setter Target="ForegroundContentPresenter.Foreground"
+                              Value="{ThemeResource RatingControlPointerOverUnselectedForeground}" />
+                    </VisualState.Setters>
+                  </VisualState>
+                  <VisualState x:Name="Set">
+                    <VisualState.Setters>
+                      <Setter Target="ForegroundContentPresenter.Foreground"
+                              Value="{ThemeResource RatingControlSelectedForeground}" />
+                    </VisualState.Setters>
+                  </VisualState>
+                  <VisualState x:Name="PointerOverSet">
+                    <VisualState.Setters>
+                      <Setter Target="ForegroundContentPresenter.Foreground"
+                              Value="{ThemeResource RatingControlSelectedForeground}" />
+                    </VisualState.Setters>
+                  </VisualState>
+                </VisualStateGroup>
+
+              </VisualStateManager.VisualStateGroups>
+
+              <StackPanel Orientation="Horizontal"
+                          Grid.Row="0"
+                          Margin="-20,-20,-20,-20">
+                <StackPanel x:Name="RatingBackgroundStackPanel"
+                            Orientation="Horizontal"
+                            Background="Transparent"
+                            Margin="20,20,0,20" />
+                <TextBlock x:Name="Caption"
+                           Height="32"
+                           Margin="4,9,20,0"
+                           TextLineBounds="TrimToBaseline"
+                           Style="{ThemeResource CaptionTextBlockStyle}"
+                           VerticalAlignment="Center"
+                           AutomationProperties.AccessibilityView="Raw"
+                           AutomationProperties.Name="RatingCaption"
+                           IsHitTestVisible="False"
+                           Text="{TemplateBinding Caption}" />
+                <!-- 4 = 8 item spacing +4 of magic redline spacing -8 to compensate for scale of the last RatingItem -->
+                <!-- NB: The redlines say 8px, but it's really 12 px because:
+                                Designer note: The value between the last glyph and first text character is 12px.
+                                (There's 4px of whitespace accounted for in the text area in the redline) -->
+                <!-- TODO MSFT: 9925444 Fix vertical alignment in all text scenarios -->
+              </StackPanel>
+
+              <ContentPresenter x:Name="ForegroundContentPresenter"
+                                IsHitTestVisible="False"
+                                Grid.Row="0">
+                <!-- Margin is on the StackPanel because ContentPresenter clips differently such that moving the reverse margin up won't work -->
+                <StackPanel Orientation="Horizontal"
+                            Margin="-40,-40,-40,-40">
+                  <StackPanel x:Name="RatingForegroundStackPanel"
+                              Orientation="Horizontal"
+                              IsHitTestVisible="False"
+                              Margin="40,40,40,40" />
+                </StackPanel>
+              </ContentPresenter>
+            </Grid>
+          </ControlTemplate>
+        </Setter.Value>
+      </Setter>
+    </Style>
   </UserControl.Resources>
   <Grid Background="{x:Bind Background, Mode=OneWay}"
         BorderBrush="{x:Bind BorderBrush, Mode=OneWay}"
@@ -79,13 +174,20 @@
                  RelativePanel.Above="Rating"
                  Text="{x:Bind Gallery.Language, Mode=OneWay, Converter={StaticResource StringConverter}}"
                  Style="{StaticResource DetailTextBlockStyle}" />
-      <TextBlock x:Name="Rating"
+      <!--<TextBlock x:Name="Rating"
                  Padding="0,2.5"
                  RelativePanel.AlignBottomWithPanel="True"
                  Text="{x:Bind Gallery.Rating, Mode=OneWay, Converter={StaticResource RateStringConverter}}"
                  Style="{StaticResource DetailTextBlockStyle}"
                  TextTrimming="None"
-                 FontFamily="Segoe MDL2 Assets" />
+                 FontFamily="Segoe MDL2 Assets" />-->
+      <RatingControl x:Name="Rating"
+                     Height="24"
+                     IsReadOnly="True"
+                     Padding="0"
+                     RelativePanel.AlignBottomWithPanel="True"
+                     PlaceholderValue="{x:Bind Gallery.Rating, Mode=OneWay}"
+                     Margin="0,-4,0,0" />
       <TextBlock x:Name="tbCount"
                  RelativePanel.AlignVerticalCenterWith="CategoryTag"
                  RelativePanel.RightOf="CategoryTag"
