--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -540,8 +540,10 @@
                      Style="{StaticResource GalleryTitleTextBlockStyle}"
                      Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}">
                         <ToolTipService.ToolTip>
+                          <ToolTip IsEnabled="{x:Bind tbGalleryName.IsTextTrimmed, Mode=OneWay}">
                             <TextBlock Text="{x:Bind VM.Gallery, Mode=OneWay, Converter={StaticResource GalleryToTitleStringConverter}}"
                                        TextWrapping="WrapWholeWords" />
+                          </ToolTip>
                         </ToolTipService.ToolTip>
                     </TextBlock>
         </Grid>
