fix some ui logic
Former-commit-id: 40dd39ff70cc60abbac8e9c9592196ccff23853c [formerly f8b0ea45bb36cdf6e8ce2937c3419504bad1d759]
Former-commit-id: 03a5eedf72a151ce87dcd73eba30c6bfa8d92f2c

--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -759,8 +759,8 @@
                                       FontFamily="XamlAutoFontFamily"
                                       FontWeight="Normal"
                                       Foreground="{TemplateBinding Foreground}"
-                                      HorizontalAlignment="Left"
-                                      VerticalAlignment="Top"
+                                      HorizontalContentAlignment="Stretch"
+                                      VerticalContentAlignment="Stretch"
                                       IsTabStop="False">
                         <ContentControl.Template>
                           <ControlTemplate TargetType="ContentControl">
@@ -776,6 +776,8 @@
                         </ContentControl.Template>
                       </ContentControl>
                       <ContentPresenter x:Name="Content"
+                                        HorizontalContentAlignment="Stretch"
+                                        VerticalContentAlignment="Stretch"
                                         ContentTemplate="{TemplateBinding ContentTemplate}"
                                         Content="{TemplateBinding Content}"
                                         FontSize="{ThemeResource ControlContentThemeFontSize}"
