--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -1,214 +1,95 @@
 ﻿<controls:MyContentDialog x:Class="ExViewer.Views.LogOnDialog"
-               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-               xmlns:local="using:ExViewer"
-               xmlns:controls="using:ExViewer.Controls"
-               xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-               mc:Ignorable="d"
-               x:Uid="Views/LogOnDialog/ContentDialog"
-               Loaded="ContentDialog_Loaded"
-               PrimaryButtonText="OK"
-               SecondaryButtonText="?"
-               Opened="ContentDialog_Opened"
-               Closing="ContentDialog_Closing"
-               PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
-               IsPrimaryButtonEnabled="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource LogicalNotConverter}, Mode=OneWay}"
-               IsSecondaryButtonEnabled="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource LogicalNotConverter}, Mode=OneWay}"
-               MaxWidth="320">
-    <ContentDialog.Template>
-        <ControlTemplate TargetType="ContentDialog">
-            <Border x:Name="Container">
-                <Border.Resources>
-                    <x:Double x:Key="ContentDialogMinWidth">320</x:Double>
-                    <x:Double x:Key="ContentDialogMaxWidth">548</x:Double>
-                    <x:Double x:Key="ContentDialogMinHeight">184</x:Double>
-                    <x:Double x:Key="ContentDialogMaxHeight">756</x:Double>
-                    <x:Double x:Key="ContentDialogButtonMinWidth">130</x:Double>
-                    <x:Double x:Key="ContentDialogButtonMaxWidth">202</x:Double>
-                    <x:Double x:Key="ContentDialogButtonHeight">32</x:Double>
-                    <x:Double x:Key="ContentDialogTitleMaxHeight">56</x:Double>
-                    <Thickness x:Key="ContentDialogBorderWidth">1</Thickness>
-                    <Thickness x:Key="ContentDialogButton1HostMargin">24,0,0,24</Thickness>
-                    <Thickness x:Key="ContentDialogButton2HostMargin">4,0,24,24</Thickness>
-                    <Thickness x:Key="ContentDialogContentMargin">24,0,24,0</Thickness>
-                    <Thickness x:Key="ContentDialogContentScrollViewerMargin">0,0,0,24</Thickness>
-                    <Thickness x:Key="ContentDialogTitleMargin">24,18,24,0</Thickness>
-                </Border.Resources>
-                <Grid x:Name="LayoutRoot">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
-                    <Border x:Name="BackgroundElement"
-                            Background="{TemplateBinding Background}"
-                            FlowDirection="{TemplateBinding FlowDirection}"
-                            BorderThickness="{ThemeResource ContentDialogBorderWidth}"
-                            BorderBrush="{ThemeResource SystemControlForegroundAccentBrush}"
-                            MaxWidth="{TemplateBinding MaxWidth}"
-                            MaxHeight="{TemplateBinding MaxHeight}"
-                            MinWidth="{TemplateBinding MinWidth}"
-                            MinHeight="{TemplateBinding MinHeight}">
-                        <Grid x:Name="DialogSpace"
-                              VerticalAlignment="Stretch">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
-                                <RowDefinition Height="*" />
-                                <RowDefinition Height="Auto" />
-                            </Grid.RowDefinitions>
-                            <ScrollViewer x:Name="ContentScrollViewer"
-                                          HorizontalScrollBarVisibility="Disabled"
-                                          VerticalScrollBarVisibility="Disabled"
-                                          ZoomMode="Disabled"
-                                          Margin="{ThemeResource ContentDialogContentScrollViewerMargin}"
-                                          IsTabStop="False">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="Auto" />
-                                        <RowDefinition Height="Auto" />
-                                    </Grid.RowDefinitions>
-                                    <ContentControl x:Name="Title"
-                                                    Margin="{ThemeResource ContentDialogTitleMargin}"
-                                                    Content="{TemplateBinding Title}"
-                                                    ContentTemplate="{TemplateBinding TitleTemplate}"
-                                                    FontSize="20"
-                                                    FontFamily="XamlAutoFontFamily"
-                                                    FontWeight="Normal"
-                                                    Foreground="{TemplateBinding Foreground}"
-                                                    IsTabStop="False"
-                                                    MaxHeight="{ThemeResource ContentDialogTitleMaxHeight}"
-                                                    VerticalContentAlignment="Stretch"
-                                                    HorizontalContentAlignment="Stretch">
-                                        <ContentControl.Template>
-                                            <ControlTemplate TargetType="ContentControl">
-                                                <ContentPresenter Content="{TemplateBinding Content}"
-                                                                  MaxLines="2"
-                                                                  TextWrapping="Wrap"
-                                                                  ContentTemplate="{TemplateBinding ContentTemplate}"
-                                                                  Margin="{TemplateBinding Padding}"
-                                                                  ContentTransitions="{TemplateBinding ContentTransitions}"
-                                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
-                                            </ControlTemplate>
-                                        </ContentControl.Template>
-                                    </ContentControl>
-                                    <ContentPresenter x:Name="Content"
-                                                      ContentTemplate="{TemplateBinding ContentTemplate}"
-                                                      Content="{TemplateBinding Content}"
-                                                      FontSize="{ThemeResource ControlContentThemeFontSize}"
-                                                      FontFamily="{ThemeResource ContentControlThemeFontFamily}"
-                                                      Margin="{ThemeResource ContentDialogContentMargin}"
-                                                      Foreground="{TemplateBinding Foreground}"
-                                                      Grid.Row="1"
-                                                      TextWrapping="Wrap" />
-                                </Grid>
-                            </ScrollViewer>
-                            <Grid x:Name="CommandSpace"
-                                  Grid.Row="1"
-                                  HorizontalAlignment="Stretch"
-                                  VerticalAlignment="Bottom">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
-                                    <ColumnDefinition />
-                                </Grid.ColumnDefinitions>
-                                <Border x:Name="Button1Host"
-                                        Margin="{ThemeResource ContentDialogButton1HostMargin}"
-                                        MinWidth="{ThemeResource ContentDialogButtonMinWidth}"
-                                        MaxWidth="{ThemeResource ContentDialogButtonMaxWidth}"
-                                        Height="{ThemeResource ContentDialogButtonHeight}"
-                                        HorizontalAlignment="Stretch" />
-                                <Border x:Name="Button2Host"
-                                        Margin="{ThemeResource ContentDialogButton2HostMargin}"
-                                        MinWidth="{ThemeResource ContentDialogButtonMinWidth}"
-                                        MaxWidth="{ThemeResource ContentDialogButtonMaxWidth}"
-                                        Height="{ThemeResource ContentDialogButtonHeight}"
-                                        Grid.Column="1"
-                                        HorizontalAlignment="Stretch" />
-                            </Grid>
-                        </Grid>
-                    </Border>
-                </Grid>
-            </Border>
-        </ControlTemplate>
-    </ContentDialog.Template>
-    <ContentDialog.Title>
-        <Grid>
-            <TextBlock x:Uid="Views/LogOnDialog/TitleTextBlock"
-                       Text="LOG ON" />
-            <HyperlinkButton x:Uid="Views/LogOnDialog/RegisterHyperlinkButton"
-                             x:Name="btn_Register"
-                             Content="Register"
-                             HorizontalAlignment="Right"
-                             Style="{StaticResource TextBlockButtonStyle}"
-                             Padding="0"
-                             NavigateUri="https://forums.e-hentai.org/index.php?act=Reg&amp;CODE=00"
-                             FontSize="12" />
-        </Grid>
-    </ContentDialog.Title>
-    <StackPanel>
-        <TextBox x:Uid="Views/LogOnDialog/UserNameTextBox"
-                 x:Name="tb_user"
+                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                          xmlns:local="using:ExViewer"
+                          xmlns:controls="using:ExViewer.Controls"
+                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                          mc:Ignorable="d"
+                          x:Uid="Views/LogOnDialog/ContentDialog"
+                          Loaded="ContentDialog_Loaded"
+                          PrimaryButtonText="OK"
+                          SecondaryButtonText="?"
+                          Opened="ContentDialog_Opened"
+                          Closing="ContentDialog_Closing"
+                          PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
+                          IsEnabled="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource LogicalNotConverter}, Mode=OneWay}">
+  <ContentDialog.Title>
+    <Grid>
+      <TextBlock x:Uid="Views/LogOnDialog/TitleTextBlock"
+                 Text="LOG ON" />
+      <HyperlinkButton x:Uid="Views/LogOnDialog/RegisterHyperlinkButton"
+                       x:Name="btn_Register"
+                       Content="Register"
+                       HorizontalAlignment="Right"
+                       Style="{StaticResource TextBlockButtonStyle}"
+                       Padding="0"
+                       NavigateUri="https://forums.e-hentai.org/index.php?act=Reg&amp;CODE=00"
+                       FontSize="12" />
+    </Grid>
+  </ContentDialog.Title>
+  <StackPanel Width="270">
+    <TextBox x:Uid="Views/LogOnDialog/UserNameTextBox"
+             x:Name="tb_user"
+             Margin="0,4"
+             IsReadOnly="{x:Bind pb_Loading.IsIndeterminate, Mode=OneWay}"
+             PlaceholderText="User name"
+             InputScope="EmailNameOrAddress"
+             TextChanged="tb_TextChanged" />
+    <PasswordBox x:Uid="Views/LogOnDialog/PasswordBox"
+                 x:Name="pb_pass"
                  Margin="0,4"
-                 IsReadOnly="{x:Bind pb_Loading.IsIndeterminate, Mode=OneWay}"
-                 PlaceholderText="User name"
-                 InputScope="EmailNameOrAddress"
-                 TextChanged="tb_TextChanged" />
-        <PasswordBox x:Uid="Views/LogOnDialog/PasswordBox"
-                     x:Name="pb_pass"
-                     Margin="0,4"
-                     PlaceholderText="Password"
-                     PasswordChanged="tb_TextChanged" />
-        <Grid x:Name="sp_ReCaptcha"
-              Visibility="Collapsed">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Border Grid.ColumnSpan="2"
-                    Margin="0,4"
-                    BorderBrush="{ThemeResource SystemControlBackgroundBaseLowBrush}"
-                    BorderThickness="2"
-                    Background="{ThemeResource SystemControlBackgroundAltMediumLowBrush}">
-                <Image x:Name="img_ReCaptcha"
-                       MinHeight="50" />
-            </Border>
-            <TextBox x:Uid="Views/LogOnDialog/ReCaptchaTextBox"
-                     x:Name="tb_ReCaptcha"
-                     Margin="0,4"
-                     IsReadOnly="{x:Bind pb_Loading.IsIndeterminate, Mode=OneWay}"
-                     Grid.Row="1"
-                     PlaceholderText="ReCaptcha"
-                     InputScope="AlphanumericHalfWidth"
-                     TextChanged="tb_TextChanged"
-                     IsSpellCheckEnabled="False" />
-            <Button x:Uid="Views/LogOnDialog/ReloadReCaptchaButton"
-                    x:Name="btn_ReloadReCaptcha"
-                    Style="{StaticResource TextBlockButtonStyle}"
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    Margin="4,4,0,4"
-                    Content="&#xE72C;"
-                    FontFamily="Segoe MDL2 Assets"
-                    Click="btn_ReloadReCaptcha_Click"
-                    ToolTipService.ToolTip="Reload ReCaptcha"
-                    HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch" />
-        </Grid>
-        <Grid Margin="0,8,0,0"
-              MinHeight="4">
-            <TextBlock x:Name="tb_info"
-                       HorizontalAlignment="Stretch"
-                       TextWrapping="WrapWholeWords"
-                       Visibility="{x:Bind tb_info.Text, Mode=OneWay, Converter={StaticResource EmptyStringToCollapsedConverter}}" />
-            <ProgressBar x:Name="pb_Loading"
-                         Visibility="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
-                         VerticalAlignment="Top" />
-        </Grid>
-    </StackPanel>
+                 PlaceholderText="Password"
+                 PasswordChanged="tb_TextChanged" />
+    <Grid x:Name="sp_ReCaptcha"
+          Visibility="Collapsed">
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="Auto" />
+      </Grid.RowDefinitions>
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition />
+        <ColumnDefinition Width="Auto" />
+      </Grid.ColumnDefinitions>
+      <Border Grid.ColumnSpan="2"
+              Margin="0,4"
+              BorderBrush="{ThemeResource SystemControlBackgroundBaseLowBrush}"
+              BorderThickness="2"
+              Background="{ThemeResource SystemControlBackgroundAltMediumLowBrush}">
+        <Image x:Name="img_ReCaptcha"
+               MinHeight="50" />
+      </Border>
+      <TextBox x:Uid="Views/LogOnDialog/ReCaptchaTextBox"
+               x:Name="tb_ReCaptcha"
+               Margin="0,4"
+               IsReadOnly="{x:Bind pb_Loading.IsIndeterminate, Mode=OneWay}"
+               Grid.Row="1"
+               PlaceholderText="ReCaptcha"
+               InputScope="AlphanumericHalfWidth"
+               TextChanged="tb_TextChanged"
+               IsSpellCheckEnabled="False" />
+      <Button x:Uid="Views/LogOnDialog/ReloadReCaptchaButton"
+              x:Name="btn_ReloadReCaptcha"
+              Style="{StaticResource TextBlockButtonStyle}"
+              Grid.Row="1"
+              Grid.Column="1"
+              Margin="4,4,0,4"
+              Content="&#xE72C;"
+              FontFamily="Segoe MDL2 Assets"
+              Click="btn_ReloadReCaptcha_Click"
+              ToolTipService.ToolTip="Reload ReCaptcha"
+              HorizontalAlignment="Stretch"
+              VerticalAlignment="Stretch" />
+    </Grid>
+    <Grid Margin="0,8,0,0"
+          MinHeight="4">
+      <TextBlock x:Name="tb_info"
+                 HorizontalAlignment="Stretch"
+                 TextWrapping="WrapWholeWords"
+                 Visibility="{x:Bind tb_info.Text, Mode=OneWay, Converter={StaticResource EmptyStringToCollapsedConverter}}" />
+      <ProgressBar x:Name="pb_Loading"
+                   Visibility="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}"
+                   VerticalAlignment="Top" />
+    </Grid>
+  </StackPanel>
 </controls:MyContentDialog>
