--- a/ExViewer/Views/InfoPage.xaml
+++ b/ExViewer/Views/InfoPage.xaml
@@ -71,6 +71,17 @@
         </Setter.Value>
       </Setter>
     </Style>
+    <Style x:Key="IngoPageRadialProgressBarStyle"
+           TargetType="tk:RadialProgressBar">
+      <Setter Property="HorizontalAlignment"
+              Value="Center" />
+      <Setter Property="Width"
+              Value="60" />
+      <Setter Property="Height"
+              Value="60" />
+      <Setter Property="IsTabStop"
+              Value="False" />
+    </Style>
     <MenuFlyout x:Name="mfTaggingRecord">
       <MenuFlyoutItem x:Uid="Views/InfoPage/OpenGalleryMenuFlyoutItem"
                       Command="{x:Bind VM.OpenGallery}"
@@ -235,15 +246,11 @@
                            Style="{StaticResource InfoPageBodyTextBlockStyle}"
                            Text="Voted Accuracy" />
                 <tk:RadialProgressBar Grid.Row="1"
-                                      HorizontalAlignment="Center"
-                                      Width="60"
-                                      Height="60"
+                                      Style="{StaticResource IngoPageRadialProgressBarStyle}"
                                       Value="{x:Bind percent(VM.TaggingStatistics.StartedAccuracy), Mode=OneWay}" />
                 <tk:RadialProgressBar Grid.Row="1"
                                       Grid.Column="1"
-                                      HorizontalAlignment="Center"
-                                      Width="60"
-                                      Height="60"
+                                      Style="{StaticResource IngoPageRadialProgressBarStyle}"
                                       Value="{x:Bind percent(VM.TaggingStatistics.VotedAccuracy), Mode=OneWay}" />
                 <TextBlock Grid.Row="1"
                            HorizontalAlignment="Center"
